fix: overflow

--- a/blocks/exp/exp.css
+++ b/blocks/exp/exp.css
@@ -4,4 +4,5 @@
   color: #021F49;
   min-height: 900px;
   padding-top: 100px;
+  overflow: hidden;
 }
