--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,5 +5,4 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  overflow-x: hidden;
 }
