--- a/blocks/use/__com/use__com.css
+++ b/blocks/use/__com/use__com.css
@@ -2,6 +2,6 @@
   position: absolute;
   width: 468px;
   height: 431px;
-  bottom: -273px;
-  left: 1165px;
+  bottom: -210px;
+  right: 295px;
 }
