--- a/blocks/use/__cpu/use__cpu.css
+++ b/blocks/use/__cpu/use__cpu.css
@@ -2,6 +2,6 @@
   position: absolute;
   width: 439px;
   height: 379px;
-  bottom: -275px;
-  left: 883px;
+  bottom: -267px;
+  right: 637px;
 }
