--- a/blocks/use/__exp/use__exp.css
+++ b/blocks/use/__exp/use__exp.css
@@ -2,6 +2,6 @@
   position: absolute;
   width: 416px;
   height: 383px;
-  bottom: -70px;
-  left: 1362px;
+  bottom: -50px;
+  right: 150px;
 }
